# state

./: .gitignore  .gitmodules  MODEL_ACCEPTABLE_USE_POLICY.md  MODEL_LICENSE.md  README.md  callbacks.py  data.py  environment.yml  eval_single_anndata.py  get_pert_splits_for_ct.py  inference_module.py  launch_job.sh  metrics_across_folds_and_models.py  model.py  pertsets_environment.yml  perturb_adata.py  pyproject.toml  ruff.toml  train_lit.py  utils.py  vci_pertbench_environment.yml
callbacks/: __init__.py  batch_speed_monitor.py
conf/: defaults.yaml  eval.yaml
configs/: config.yaml
configs/data/: default.yaml  multidataset.yaml  perturbation.yaml
configs/model/: cellcontextmean.yaml  celltypemean.yaml  cpa.yaml  decoder_only.yaml  embedsum.yaml  globalsimplesum.yaml  neuralot.yaml  old_neuralot.yaml  pertsets.yaml  scgpt-chemical.yaml  scgpt-genetic.yaml  scvi.yaml  simplesum.yaml
configs/training/: default.yaml  scgpt.yaml
configs/wandb/: abhinav.yaml  sanjay.yaml
data/data_modules/: __init__.py  multidataset_dataloader.py  perturbation_tracker.py  samplers.py  tasks.py
data/dataset/: __init__.py  perturbation_dataset.py  scgpt_perturbation_dataset.py
data/mapping_strategies/: __init__.py  batch.py  centroid.py  clustering.py  mapping_strategies.py  nearest.py  pseudo_nearest.py  pseudobulk.py  random.py
data/transforms/: __init__.py  base.py  pca.py
data/utils/: data_utils.py  modules.py  singleton.py
lightning_logs/version_1/: hparams.yaml
lightning_logs/version_4/: hparams.yaml
lightning_logs/version_6/: metrics.csv
models/: __init__.py  base.py  cell_type_mean.py  decoder_only.py  decoders.py  decoders_nb.py  embed_sum.py  global_simple_sum.py  neural_ot.py  old_neural_ot.py  pert_sets.py  pseudobulk.py  simple_sum.py  uce_decoder.py  utils.py
models/cpa/: __init__.py  _base_modules.py  _callbacks.py  _dists.py  _model.py  _module.py
models/scgpt/: gene_tokenizer.py  generation_model.py  lightning_model.py  loss.py  model.py  utils.py
nbs/: emb.ipynb
notebooks/: new_de_metrics.ipynb  test_inference.ipynb
scripts/: align_uce_vci_ds.py  de_val_ds.py  ds_split.py  eval_checkpoint.py  evo2_frozen_embs.py  export_scBasecamp.py  inference.py  preprocess.sh  preprocess_scbasecamp.py  pretrain.sh  processing.py  state_embed_anndata.py  update_ds_emb_idx.py
state/: .gitignore  environment.yml
tests/: test_dataloader.py
train/: __main__.py  evaluate_model.py  test_time_finetuner.py  utils.py
utils/: __init__.py  singleton.py  uce_model.py  uce_model_old.py  uce_utils.py
validation/: metric_utils.py  metrics.py
vci/: inference.py  loss.py  model.py  utils.py
wandb/: latest-run
张/: README.md  处理数据.ipynb  查看模型的扰动标签.ipynb  查看生成的emb & inference.ipynb
(+229 files in other folders)
