[project]
name = "state-sets"
version = "0.5.1"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.13"
dependencies = [
    "anndata>=0.11.4",
    "cell-load>=0.5.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "scanpy>=1.11.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.11",
    "hydra-core>=1.3.2",
    "geomloss>=0.2.6",
    "zclip>=0.0.1",
    "transformers>=4.52.3",
    "cell-eval>=0.5.18",
]

[dependency-groups]
dev = ["ruff>=0.11.11", "vulture>=2.14"]

[tool.uv.sources]
cell-load = { git = "ssh://github.com/arcinstitute/cell-load.git" }
cell-eval = { git = "ssh://github.com/arcinstitute/cell-eval.git" }
zclip = { git = "https://github.com/bluorion-com/ZClip.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
state-sets = "state_sets.__main__:main"

[tool.pyright]
venvPath = "."
venv = ".venv"
